# raoe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  thoughts.md
assets/: empty
cmake/: Cogs.cmake
cmake/codegen/: generated_cog.in  static_cogs.in
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/include/: static_cogs.inl
src/application/src/: main.cpp
src/client/: CMakeLists.txt
src/client/include/: application_module.hpp  imgui_module.hpp  sdl_components.hpp  sdl_module.hpp  version.hpp
src/client/src/: application_module.cpp  imgui_module.cpp  main.cpp  sdl_module.cpp
src/console/: CMakeLists.txt
src/console/include/: console_gear.hpp  display_console.hpp
src/console/src/: console_gear.cpp  display_console.cpp
src/core/: CMakeLists.txt
src/core/include/: const_math.hpp  core.hpp  core_minimal.hpp  debug.hpp  enum.hpp  from_string.hpp  inline.hpp  lazy.hpp  parse.hpp  string.hpp  time.hpp  tuple.hpp  typename.hpp  types.hpp
src/core/include/container/: subclass_map.hpp
src/core/include/coro/: awaiters.hpp  base_tasks.hpp  coro.hpp  promise.hpp  task.hpp  task_private.hpp  task_shared.hpp
src/core/test/: CMakeLists.txt  command_func_test.cpp  coro_test.cpp  lazy_test.cpp  parse_test.cpp  string_test.cpp  subclass_map_test.cpp
src/engine/: CMakeLists.txt
src/engine/include/: engine.hpp  engine_cog.hpp  engine_fwd.hpp  engine_ticker.hpp
src/engine/include/cogs/: cog.hpp  cog_service.hpp  gear.hpp  gear_service.hpp
src/engine/include/console/: command.hpp  console.hpp
src/engine/include/resource/: handle.hpp  iresource.hpp  loader.hpp  locator.hpp  resource_locator.hpp  resource_service.hpp  resource_type.hpp  resources.hpp  service.hpp  tag.hpp  type.hpp
src/engine/include/resource/assets/: text_asset.hpp
src/engine/include/resource/awaitable/: await_handle.hpp  await_resource_service.hpp
src/engine/include/services/: iservice.hpp  service_mixin.hpp  task_service.hpp  tick_service.hpp
src/engine/src/: engine.cpp  engine_cog.cpp  engine_ticker.cpp
src/engine/src/cogs/: cog.cpp  cog_service.cpp  gear_service.cpp
src/engine/src/console/: console.cpp  engine_commands.cpp
src/engine/src/resource/: handle.cpp  resource_service.cpp  service.cpp  tag.cpp  type.cpp
src/engine/src/services/: task_service.cpp
src/engine/test/: CMakeLists.txt  resource_locator_test.cpp  resource_tag_test.cpp
src/engine/test/assets/: .info
src/flecs_cog/: CMakeLists.txt
src/flecs_cog/src/: flecs_cog.cpp
src/framework/: CMakeLists.txt
src/framework/include/: framework.hpp
src/framework/include/components/: game_components.hpp
src/framework/src/: framework.cpp  framework_gear.cpp  game_components.cpp  game_components_private.hpp
src/frontend/: CMakeLists.txt
src/frontend/include/: frontend.hpp
src/frontend/src/: frontend.cpp  frontend_internal.hpp  gear.cpp
src/games/: CMakeLists.txt
src/games/pong/: CMakeLists.txt
src/games/pong/src/: pong.cpp
src/new_cog/: CMakeLists.txt
src/new_cog/src/: new_cog.cpp
src/with_flecs/: CMakeLists.txt
src/with_flecs/flecs_cog/: CMakeLists.txt
src/with_flecs/flecs_cog/include/: client_app_module.hpp  flecs_cog.hpp  flecs_gear.hpp
src/with_flecs/flecs_cog/src/: client_app_module.cpp  flecs_cog.cpp  flecs_gear.cpp
src/with_flecs/imgui_sdl_flecs_cog/: CMakeLists.txt
src/with_flecs/imgui_sdl_flecs_cog/include/: imgui_module.hpp
src/with_flecs/imgui_sdl_flecs_cog/src/: imgui_cog.cpp  imgui_module.cpp
src/with_flecs/sdl_flecs_cog/: CMakeLists.txt
src/with_flecs/sdl_flecs_cog/include/: sdl_components.hpp  sdl_helper.hpp  sdl_module.hpp
src/with_flecs/sdl_flecs_cog/src/: sdl_cog.cpp  sdl_gear.cpp  sdl_module.cpp
